TT#10837 Test all collections in one script - POST
Change-Id: I05b3bb4f73813efe757e695c11315ff9fccd085d

--- a/t/api-rest/control
+++ b/t/api-rest/control
@@ -8,6 +8,7 @@ Build-Depends: libboolean-perl,
                libemail-sender-perl,
                libhtml-formhandler-perl,
                libjson-perl,
+               libfile-grep-perl,
                libnetaddr-ip-perl,
                libsereal-decoder-perl,
                libsereal-encoder-perl,
