TT#5050 Use bcrypt to hash webpassword
No point to have the webpassword stored in clear text.

Change-Id: Iefa9584a62ab4b7d2a224d10bdd415e9cbb8dfb5

--- a/ngcp_panel.conf
+++ b/ngcp_panel.conf
@@ -1,14 +1,4 @@
-# rename this file to ngcp::panel.yml and put a ':' after 'name' if
-# you want to use YAML like in old versions of Catalyst
 name NGCP::Panel
-
-log4perl.logger=DEBUG, Default
-log4perl.appender.Default=Log::Log4perl::Appender::Screen
-log4perl.appender.Default.stderr=0
-log4perl.appender.Default.utf8=1
-log4perl.appender.Default.layout=PatternLayout
-log4perl.appender.Default.layout.ConversionPattern=%d{ISO8601} [%p] [%F +%L] %m{chomp}%n
-# perhaps also add: host=%H pid=%P
 
 <api_debug_opts>
     allow_fake_client_time 1
@@ -23,45 +13,40 @@ log4perl.appender.Default.layout.ConversionPattern=%d{ISO8601} [%p] [%F +%L] %m{
 </Model::InterceptDB>
 
 <contact>
-  email postmaster@domain.invalid
+  email    adjust@example.org
+  timezone localtime
 </contact>
 
 <features>
-  callflow     1
-  multidomain  1
-
-  faxserver    1
-  conference   1
-
-  debug        1
-  cloudpbx     1
-
-  callingcard  1
-  voucher      1
-
-  malicious_call  1
+  multidomain	1
+  conference	1
+  malicious_call	0
+  sms   0
 </features>
 
 <dashboard>
-    admin  [ AdminSystemOverview ]
-    admin    AdminBillingOverview
-    admin    AdminPeeringOverview
-    admin    AdminResellerOverview
+  admin  [ AdminSystemOverview ]
+  admin    AdminBillingOverview
+  admin    AdminPeeringOverview
+  admin    AdminResellerOverview
 
-    reseller  [ ResellerCustomerOverview ]
-    reseller    ResellerDomainOverview
-    reseller    ResellerBillingOverview
+  reseller  [ ResellerCustomerOverview ]
+  reseller    ResellerDomainOverview
+  reseller    ResellerBillingOverview
 
-    subscriberadmin  [ SubscriberVmOverview ]
-    subscriberadmin    SubscriberCFOverview
-    subscriberadmin    SubscriberCallsOverview
-    subscriberadmin    SubscriberRegisterOverview
+  subscriberadmin  [ SubscriberVmOverview ]
+  subscriberadmin    SubscriberCFOverview
+  subscriberadmin    SubscriberCallsOverview
+  subscriberadmin    SubscriberRegisterOverview
 
-    subscriber  [ SubscriberVmOverview ]
-    subscriber    SubscriberCFOverview
-    subscriber    SubscriberCallsOverview
-    subscriber    SubscriberRegisterOverview
+  subscriber  [ SubscriberVmOverview ]
+  subscriber    SubscriberCFOverview
+  subscriber    SubscriberCallsOverview
+  subscriber    SubscriberRegisterOverview
 </dashboard>
+
+<appearance>
+</appearance>
 
 <grafana>
   schema http
@@ -69,67 +54,60 @@ log4perl.appender.Default.layout.ConversionPattern=%d{ISO8601} [%p] [%F +%L] %m{
   port 4000
 </grafana>
 
-<faxserver>
-  sendfax	/usr/bin/sendfax
-  ip		127.0.0.1
-</faxserver>
 
-<cloudpbx>
-  sync	/etc/ngcp-panel/check-sync/check-sync
-</cloudpbx>
+<fees_csv>
+    element_order source
+    element_order destination
+    element_order direction
+    element_order zone
+    element_order zone_detail
+    element_order onpeak_init_rate
+    element_order onpeak_init_interval
+    element_order onpeak_follow_rate
+    element_order onpeak_follow_interval
+    element_order offpeak_init_rate
+    element_order offpeak_init_interval
+    element_order offpeak_follow_rate
+    element_order offpeak_follow_interval
+    element_order use_free_time
+  </fees_csv>
 
-# if uploading as admin, a column reseller_id is added at the beginning
+# if uploading as admin, a column reseller_id is assumed at the beginning
 # automatically, so the csv must in addition have reseller_id as first element
 <voucher_csv>
   element_order  code
   element_order  amount
   element_order  valid_until
   element_order  customer_id
-  element_order  package_id
 </voucher_csv>
 
 <dialogic>
-  own_ip 10.15.20.199
+  own_ip 10.15.17.185
   username dialogic
   password Dial0gic
 </dialogic>
 
-<fees_csv>
-  element_order  source
-  element_order  destination
-  element_order  direction
-  element_order  zone
-  element_order  zone_detail
-  element_order  onpeak_init_rate
-  element_order  onpeak_init_interval
-  element_order  onpeak_follow_rate
-  element_order  onpeak_follow_interval
-  element_order  offpeak_init_rate
-  element_order  offpeak_init_interval
-  element_order  offpeak_follow_rate
-  element_order  offpeak_follow_interval
-  element_order  use_free_time
-</fees_csv>
-
 <sip>
-  path <sip:127.0.0.1:5062;lr>
-  lb_ext 1.2.3.4:5060
-</sip>
+  path <sip:127.0.0.1:5060;lr>
+  lb_ext 10.15.17.185:5060
+      tls_port	5061
+  </sip>
 
 <speed_dial_vsc_presets>
-  vsc *0
-  vsc *1
-  vsc *2
-  vsc *3
-  vsc *4
-  vsc *5
-  vsc *6
-  vsc *7
-  vsc *8
-  vsc *9
-</speed_dial_vsc_presets>
+    vsc *0
+    vsc *1
+    vsc *2
+    vsc *3
+    vsc *4
+    vsc *5
+    vsc *6
+    vsc *7
+    vsc *8
+    vsc *9
+  </speed_dial_vsc_presets>
 
 <security>
+  log_passwords 0
   failed_auth_attempts 3
   password_min_length	6
   password_max_length	40
@@ -138,28 +116,21 @@ log4perl.appender.Default.layout.ConversionPattern=%d{ISO8601} [%p] [%F +%L] %m{
   password_musthave_digit	0
   password_musthave_specialchar	0
   password_allow_recovery	0
-  password_sip_autogenerate	1
+  password_sip_autogenerate	0
   password_web_autogenerate	0
-  password_sip_expose_subadmin	0
-  password_web_expose_subadmin	0
+  password_sip_expose_subadmin	1
+  password_web_expose_subadmin	1
 </security>
 
 <profile_sets>
   reseller_edit	1
 </profile_sets>
 
-<callflow>
-  lb_int	127.0.0.1:5060
-  lb_ext	1.2.3.4:5060
-  proxy		127.0.0.1:5062
-  sbc		127.0.0.1:5080
-  app		127.0.0.1:5070
-  pbx		127.0.0.1:5085
-</callflow>
 
 <numbermanagement>
   auto_allow_cli  1
-</numbermanagement>
+    auto_sync_cli  1
+  </numbermanagement>
 
 <ssl>
   rest_api_keyfile  /etc/ngcp-config/ssl/api_ca.key
@@ -167,245 +138,189 @@ log4perl.appender.Default.layout.ConversionPattern=%d{ISO8601} [%p] [%F +%L] %m{
   server_certfile   /etc/ngcp-config/ssl/myserver.crt
 </ssl>
 
-<deviceprovisioning>
-  secure 1
-  host ciscospa.sipwise.com
-  port 4444
-  server_certfile /path/to/invalid
-  ca_certfile /path/to/invalid
-  softphone_lockdown 1
-  softphone_webauth  1
-  skip_vendor_redirect 0
-</deviceprovisioning>
 
-<elasticsearch>
-  host 127.0.0.1
-  port 9200
-</elasticsearch>
-
-<rtc>
-  schema https
-  host rtcengine.sipwise.com
-  port 443
-  path /rtcengine/api
-  user gjungwirth@sipwise
-  pass 123456
-</rtc>
 
 <api_journal>
   <billingprofiles>
     operations create
     operations update
     operations delete
-    format sereal
+    format json
     enabled 1
   </billingprofiles>
-  <systemcontacts>
-    operations create
-    operations update
-    operations delete
-    format sereal
-    enabled 1
-  </systemcontacts>
-  <contracts>
-    operations create
-    operations update
-    operations delete
-    format sereal
-    enabled 1
-  </contracts>
-  <resellers>
-    operations create
-    operations update
-    operations delete
-    format sereal
-    enabled 1
-  </resellers>
-  <customercontacts>
-    operations create
-    operations update
-    operations delete
-    format sereal
-    enabled 1
-  </customercontacts>
-  <customers>
-    operations create
-    operations update
-    operations delete
-    format sereal
-    enabled 1
-  </customers>
-  <customerfraudpreferences>
-    operations create
-    operations update
-    operations delete
-    format sereal
-    enabled 1
-  </customerfraudpreferences>
-  <domains>
-    operations create
-    operations update
-    operations delete
-    format sereal
-    enabled 1
-  </domains>
-  <subscribers>
-    operations create
-    operations update
-    operations delete
-    format sereal
-    enabled 1
-  </subscribers>
-
-  <customerpreferences>
-    operations create
-    operations update
-    operations delete
-    format sereal
-    enabled 1
-  </customerpreferences>
-  <soundsets>
-    operations create
-    operations update
-    operations delete
-    format sereal
-    enabled 1
-  </soundsets>
-  <subscriberpreferences>
-    operations create
-    operations update
-    operations delete
-    format sereal
-    enabled 1
-  </subscriberpreferences>
-  <subscriberprofilesets>
-    operations create
-    operations update
-    operations delete
-    format sereal
-    enabled 1
-  </subscriberprofilesets>
-  <subscriberprofiles>
-    operations create
-    operations update
-    operations delete
-    format sereal
-    enabled 1
-  </subscriberprofiles>
-  <profilepreferences>
-    operations create
-    operations update
-    operations delete
-    format sereal
-    enabled 1
-  </profilepreferences>
-
-  <cfdestinationsets>
-    operations create
-    operations update
-    operations delete
-    format sereal
-    enabled 1
-  </cfdestinationsets>
-  <cftimesets>
-    operations create
-    operations update
-    operations delete
-    format sereal
-    enabled 1
-  </cftimesets>
-  <cfmappings>
-    operations create
-    operations update
-    operations delete
-    format sereal
-    enabled 1
-  </cfmappings>
   <callforwards>
     operations create
     operations update
     operations delete
-    format sereal
+    format json
     enabled 1
   </callforwards>
   <ccmapentries>
     operations create
     operations update
     operations delete
-    format sereal
+    format json
     enabled 1
   </ccmapentries>
+  <cfdestinationsets>
+    operations create
+    operations update
+    operations delete
+    format json
+    enabled 1
+  </cfdestinationsets>
+  <cfmappings>
+    operations create
+    operations update
+    operations delete
+    format json
+    enabled 1
+  </cfmappings>
+  <cftimesets>
+    operations create
+    operations update
+    operations delete
+    format json
+    enabled 1
+  </cftimesets>
+  <contracts>
+    operations create
+    operations update
+    operations delete
+    format json
+    enabled 1
+  </contracts>
+  <customercontacts>
+    operations create
+    operations update
+    operations delete
+    format json
+    enabled 1
+  </customercontacts>
+  <customerpreferences>
+    operations create
+    operations update
+    operations delete
+    format json
+    enabled 1
+  </customerpreferences>
+  <customers>
+    operations create
+    operations update
+    operations delete
+    format json
+    enabled 1
+  </customers>
+  <domains>
+    operations create
+    operations update
+    operations delete
+    format json
+    enabled 1
+  </domains>
   <faxserversettings>
     operations create
     operations update
     operations delete
-    format sereal
+    format json
     enabled 1
   </faxserversettings>
+  <profilepreferences>
+    operations create
+    operations update
+    operations delete
+    format json
+    enabled 1
+  </profilepreferences>
   <reminders>
     operations create
     operations update
     operations delete
-    format sereal
+    format json
     enabled 1
   </reminders>
+  <resellers>
+    operations create
+    operations update
+    operations delete
+    format json
+    enabled 1
+  </resellers>
+  <soundsets>
+    operations create
+    operations update
+    operations delete
+    format json
+    enabled 1
+  </soundsets>
   <speeddials>
     operations create
     operations update
     operations delete
-    format sereal
+    format json
     enabled 1
   </speeddials>
+  <subscriberpreferences>
+    operations create
+    operations update
+    operations delete
+    format json
+    enabled 1
+  </subscriberpreferences>
+  <subscriberprofiles>
+    operations create
+    operations update
+    operations delete
+    format json
+    enabled 1
+  </subscriberprofiles>
+  <subscriberprofilesets>
+    operations create
+    operations update
+    operations delete
+    format json
+    enabled 1
+  </subscriberprofilesets>
+  <subscribers>
+    operations create
+    operations update
+    operations delete
+    format json
+    enabled 1
+  </subscribers>
+  <systemcontacts>
+    operations create
+    operations update
+    operations delete
+    format json
+    enabled 1
+  </systemcontacts>
   <trustedsources>
     operations create
     operations update
     operations delete
-    format sereal
+    format json
     enabled 1
   </trustedsources>
   <voicemailsettings>
     operations create
     operations update
     operations delete
-    format sereal
+    format json
     enabled 1
   </voicemailsettings>
-
-  <autoattendants>
-    operations create
-    operations update
-    operations delete
-    format sereal
-    enabled 1
-  </autoattendants>
-  <billingzones>
-    operations create
-    operations update
-    operations delete
-    format sereal
-    enabled 1
-  </billingzones>
-
 </api_journal>
 
 <vouchers>
-    key iBmTdavJ8joPW3HO
-    iv tww21lQe6cmywrp3
+    key CD6oZhkgq2XSb9Gz
+    iv lxZUZq0Sde5OaLqB
 </vouchers>
 
-<sems>
-  single_host_registration  0
-</sems>
-
 <external_documentation>
-</external_documentation>
+  </external_documentation>
 
-<sms>
-  schema http
-  host 127.0.0.1
-  port 999
-  path /cgi-bin/sendsms
-  user unset
-  pass unset
-  api_token abc123
-</sms>
+
+
+
+
+
