TT#16003 implement JWT auth
- read key from specific config file
- key is hex encoded

Change-Id: I6c6bd4dc0d7fa7fa43868afb13b4d8d838d90564

--- a/ngcp_panel.conf
+++ b/ngcp_panel.conf
@@ -26,6 +26,15 @@ log4perl.appender.Default.layout.ConversionPattern=%d{ISO8601} [%p] [%F +%L] %m{
     schema_class   NGCP::InterceptSchema
 </Model::InterceptDB>
 
+<Plugin::Authentication>
+    <api_subscriber_jwt>
+        <credential>
+            jwt_key ""
+            relative_exp 36000
+        </credential>
+    </api_subscriber_jwt>
+</Plugin::Authentication>
+
 <contact>
   email postmaster@domain.invalid
 </contact>
