TT#16003 implement JWT auth
- read key from specific config file
- key is hex encoded

Change-Id: I6c6bd4dc0d7fa7fa43868afb13b4d8d838d90564

--- a/debian/control
+++ b/debian/control
@@ -26,6 +26,7 @@ Depends:
  libconfig-general-perl,
  libconvert-ascii85-perl,
  libcrypt-eksblowfish-perl,
+ libcrypt-jwt-perl,
  libcrypt-rc4-perl,
  libcrypt-rijndael-perl,
  libdata-compare-perl,
