TT#16003 implement JWT auth
- read key from specific config file
- key is hex encoded
+ fix: add libcryptx-perl as dependency (actually dep of libcrypt-jwt-perl)
+ fix: typo in perl (comma instead of assignment)
+ fix: chomp any preceeding newlines from jwt_secret

Change-Id: I6c6bd4dc0d7fa7fa43868afb13b4d8d838d90564

--- a/debian/control
+++ b/debian/control
@@ -27,8 +27,10 @@ Depends:
  libconfig-general-perl,
  libconvert-ascii85-perl,
  libcrypt-eksblowfish-perl,
+ libcrypt-jwt-perl,
  libcrypt-rc4-perl,
  libcrypt-rijndael-perl,
+ libcryptx-perl,
  libdata-compare-perl,
  libdata-entropy-perl,
  libdata-hal-perl,
