--- a/debian/control
+++ b/debian/control
@@ -76,7 +76,6 @@ Depends:
  libmoosex-emulate-class-accessor-fast-perl,
  libmoosex-method-signatures-perl,
  libmoosex-types-perl,
- libngcp-rating-inew-perl,
  libnet-http-perl,
  libnet-https-any-perl,
  libnet-telnet-perl,
@@ -115,6 +114,8 @@ Depends:
  sox,
  ${misc:Depends},
  ${perl:Depends},
+Recommends:
+ libngcp-rating-inew-perl,
 Description: catalyst based panel application for NGCP
  A completely overhauled provisioning interface for the NGCP system.
 
