--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Architecture: all
 Depends:
  gettext,
  gnutls-bin,
+ grafana,
  libboolean-perl,
  libcatalyst-actionrole-acl-perl,
  libcatalyst-actionrole-checktrailingslash-perl,
