--- a/ngcp_panel.conf
+++ b/ngcp_panel.conf
@@ -10,6 +10,10 @@ log4perl.appender.Default.layout=PatternLayout
 log4perl.appender.Default.layout.ConversionPattern=%d{ISO8601} [%p] [%F +%L] %m{chomp}%n
 # perhaps also add: host=%H pid=%P
 
+<general>
+    maintenance_mode 0
+</general>
+
 <api_debug_opts>
     allow_fake_client_time 1
     allow_delay_commit 1
