--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Homepage: http://sipwise.com/
 Package: ngcp-panel
 Architecture: all
 Depends: gettext,
+         ghostscript,
          gnutls-bin,
          libboolean-perl,
          libcatalyst-actionrole-acl-perl,
