TT#17761 Add ghostscript as dependency to ngcp-panel for invoice generation
Change-Id: Ia5a22d328fea8cdc87f0fa4c957f454a8dab9d4f
(cherry picked from commit 8f3a41001ab4a666c307fcebf372931a19d185d6)

--- a/debian/control
+++ b/debian/control
@@ -72,6 +72,7 @@ Homepage: http://sipwise.com/
 Package: ngcp-panel
 Architecture: all
 Depends: gettext,
+         ghostscript,
          gnutls-bin,
          libautodie-perl (>= 2.21~),
          libcatalyst-actionrole-acl-perl,
