TT#17642 docker: follow policy to include NGCP repository
Change-Id: I0544f97ee9bb0d991916f5f88063a54d4462384b

--- a/t/api-rest/Dockerfile
+++ b/t/api-rest/Dockerfile
@@ -5,10 +5,11 @@ FROM docker.mgm.sipwise.com/sipwise-jessie:latest
 # is updated with the current date. It will force refresh of all
 # of the base images and things like `apt-get update` won't be using
 # old cached versions when the Dockerfile is built.
-ENV REFRESHED_AT 2017-06-21
+ENV REFRESHED_AT 2017-06-30
 
-# TODO - the release-trunk-jessie is too dynamic yet, though required build deps
-RUN echo "deb https://deb.sipwise.com/autobuild/ release-trunk-jessie main" >>/etc/apt/sources.list
+# files that get-code generates
+COPY t/api-rest/sources.list.d/builddeps.list /etc/apt/sources.list.d/
+COPY t/api-rest/sources.list.d/preferences /etc/apt/preferences.d/
 
 RUN apt-get update
 RUN apt-get install --assume-yes \
@@ -44,7 +45,14 @@ WORKDIR /home/testuser
 ################################################################################
 # Instructions for usage
 # ----------------------
-# When you want to build the base image from scratch (jump to the next section if you don't want to build yourself!):
+# When you want to build the base image from scratch
+# jump to the next section if you don't want to build yourself!:
+#
+# you need to put the proper NGCP sources at t/sources.list.d/builddeps.list
+# for instance, trunk:
+# echo "deb https://deb.sipwise.com/autobuild/ release-trunk-jessie main" > /
+#  t/sources.list.d/builddeps.list
+#
 # NOTE: run the following command from root folder of git repository:
 # % docker build --tag="ngcp-panel-tests-rest-api-jessie" -f t/api-rest/Dockerfile .
 # % docker run --rm -i -t -v $(pwd):/code:rw ngcp-panel-tests-rest-api-jessie:latest bash
