TT#4333 subscribers/customers/numbers/CF ACL
* Implement r/o access to /api/customers for subadmin
* Implement r/o access to /api/subscribers for subs
* Implement create access to /api/subscribers for subadmins
* Implement /api/numbers to re-assign a number
* Implement CF endpoints access for subs
* Implement new test framework to simplify testing

* Fix updating number by using Utils to make sure allowed_clis etc
  are handled correctly
* Install missing docker dependencies for new test framework
* Add edr handling on /api/numbers/xx update

Change-Id: I678da16cfb1361b2809780cba8c204ac90bb1736

--- a/t/api-rest/control
+++ b/t/api-rest/control
@@ -8,6 +8,8 @@ Build-Depends: libboolean-perl,
                libemail-sender-perl,
                libhtml-formhandler-perl,
                libjson-perl,
+               libjson-pointer-perl,
+               libfile-find-rule-perl,
                libfile-grep-perl,
                libnetaddr-ip-perl,
                libsereal-decoder-perl,
@@ -16,6 +18,7 @@ Build-Depends: libboolean-perl,
                libstring-mkpasswd-perl,
                libstring-shellquote-perl,
                libtap-harness-archive-perl,
+               libtest-deep-perl,
                libtext-table-perl,
                libtime-warp-perl,
                libtrycatch-perl,
