--- a/debian/control
+++ b/debian/control
@@ -110,6 +110,7 @@ Depends:
  libuuid-perl,
  libxml-mini-perl,
  libxml-xpath-perl,
+ libtie-ixhash-perl,
  lsb-base (>= 3.0-6),
  ngcp-schema,
  nginx-common,
