TT#22410 Fix typo in Dockerfile 'Instructions for usage'
Change-Id: Ifae439f9eb73b1eb6807f778f244d7cebb1e60c9

--- a/t/api-rest/Dockerfile
+++ b/t/api-rest/Dockerfile
@@ -56,8 +56,7 @@ WORKDIR /home/testuser
 #
 # you need to put the proper NGCP sources at t/sources.list.d/builddeps.list
 # for instance, trunk:
-# echo "deb https://deb.sipwise.com/autobuild/ release-trunk-stretch main" > /
-#  t/sources.list.d/builddeps.list
+# echo "deb https://deb.sipwise.com/autobuild/ release-trunk-stretch main" > t/sources.list.d/builddeps.list
 #
 # NOTE: run the following command from root folder of git repository:
 # % docker build --tag="ngcp-panel-tests-rest-api-stretch" -f t/api-rest/Dockerfile .
