TT#21818 Check passwords against libcrack and user
* When enabling password_sip/web_validate, panel checks password
  against username (web and sip, respectively), and runs it through
  cracklib to enforce a reasonably strong password.

Change-Id: I11f5f6c2d69dc5658f298094f7d17d26d0a26ee1

--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Homepage: https://www.sipwise.com/
 Package: ngcp-panel
 Architecture: all
 Depends:
+ cracklib-runtime,
  gettext,
  ghostscript,
  gnutls-bin,
@@ -26,6 +27,7 @@ Depends:
  libcatalyst-view-tt-perl,
  libconfig-general-perl,
  libconvert-ascii85-perl,
+ libcrypt-cracklib-perl,
  libcrypt-eksblowfish-perl,
  libcrypt-jwt-perl,
  libcrypt-rc4-perl,
