--- a/debian/control
+++ b/debian/control
@@ -26,6 +26,7 @@ Depends:
  libcatalyst-view-tt-perl,
  libconfig-general-perl,
  libconvert-ascii85-perl,
+ libcrypt-cracklib-perl,
  libcrypt-eksblowfish-perl,
  libcrypt-jwt-perl,
  libcrypt-rc4-perl,
